# candle_api

./: .gitmodules  CMakeLists.txt  MANIFEST.in  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  publish-to-pypi.yml
candle_api/: CMakeLists.txt
candle_api/include/: candle_api.h
candle_api/src/: candle_api.c  compiler.h  fifo.h  gs_usb_def.h
candle_api_js/: CMakeLists.txt  binding.cjs  binding.js  binding.mjs  candle_api.cpp  test.cjs  test.js  test.mjs
candle_api_pybind11/: CMakeLists.txt
candle_api_pybind11/candle_api/: __init__.pyi
candle_api_pybind11/src/: bindings.cpp  main.cpp
candle_api_python/: CMakeLists.txt  candle_api.c  candle_api.pyi
candle_api_python/candle_api/: candle_api.pyi  candle_bus.py
examples/: CMakeLists.txt  python.ipynb
examples/list_device/: main.c
examples/ping_pong/: main.c
examples/python/: api.ipynb  bus.py  fd_sender_probe.py  stress.py  test_gsusb_fd_500k_2m.py
examples/send_receive/: main.c
examples/stress/: CMakeLists.txt  main.c
examples/stress2/: main.c
