[project]
name = "candle_api"
version = "0.0.0"

[build-system]
requires = [
    "setuptools",
    "cmake"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["candle_api_python"]
include = ["candle_api"]
namespaces = false

[tool.cibuildwheel]
build-frontend = "build"
skip = [
    "*-musllinux*",
    "pp*",
]

[tool.cibuildwheel.linux]
before-build = "yum -y install libudev-devel"
